add photo gallery

--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
           <li>petting my dog</li>
         </ul>
       </section>
+
+      <section id='gallery'>
+
+        <h2>Photo Gallery</h2>
+
+        <hr>
+
+        <figure>
+          <img src='img/charlie-640w.jpg' alt='sitting dog'>
+          <figcaption>My dog Charlie half-sitting on his bed</figcaption>
+        </figure>
+
+        <hr>
+
+        <figure>
+          <img src='img/music-640w.jpg' alt='a record player and speakers'>
+          <figcaption>A record player and speakers</figcaption>
+        </figure>
+
+        <hr>
+
+        <figure>
+          <img src='img/switch-640w.jpg' alt='a nintentdo switch'>
+          <figcaption>A Nintendo Switch I play hours of Animal Crossing on</figcaption>
+        </figure>
+        
+      </section>
     
 
       <section id='tune'>
