--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section id="bio">
         <!--bio section-->
-        <h2>Bio</h2>
+        <h2>Biography</h2>
         
         <h3 class="subject">I want to be...</h3>
           
@@ -61,7 +61,7 @@
       <section id='hobbies'>
         <h2>My Hobbies</h2>
         <ul>
-          <li>listening to music</li>
+          <li> &#9834 listening to music &#9835</li>
           <li>playing video games</li>
           <li>petting my dog</li>
         </ul>
@@ -75,21 +75,21 @@
 
         <figure>
           <img src='img/charlie-640w.jpg' alt='sitting dog'>
-          <figcaption>My dog Charlie half-sitting on his bed</figcaption>
+          <figcaption>My dog Charlie looking really cute while half-sitting on his bed</figcaption>
         </figure>
 
         <hr>
 
         <figure>
           <img src='img/music-640w.jpg' alt='a record player and speakers'>
-          <figcaption>A record player and speakers</figcaption>
+          <figcaption>My mom's old record player and speakers I like to listen to a lot of music through</figcaption>
         </figure>
 
         <hr>
 
         <figure>
           <img src='img/switch-640w.jpg' alt='a nintentdo switch'>
-          <figcaption>A Nintendo Switch I play hours of Animal Crossing on</figcaption>
+          <figcaption>A Nintendo Switch I play hours and hours of Animal Crossing on</figcaption>
         </figure>
 
       </section>
