--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@
 
         </div>
       </article>
+
+      <section id='form'>
+        <div id='form-container'>
+          <h2>Contact Me!</h2>
+
+          <form>
+            <label for='name'>Your Name: </label>
+            <input id='name' type='text' autocomplete='name' required><br>
+  
+            <label for='reason'>Reason for contact:</label>
+            <select id='reason' name='select'>
+              <option value='default' selected>Select One</option>
+              <option value='music'>Music</option>
+              <option value='web development'>Web Development</option>
+              <option value='scleroderma'>Scleroderma</option>
+              <option value='friendship'>Friendship</option>
+              <option value='video games'>Video Games</option>
+            </select><br>
+  
+            <label for='message'>Write a message:</label><br>
+            <textarea id='message'></textarea><br>
+  
+            <input type='submit' name='submit' value='Submit'>
+          </form>
+        </div>
+      </section>
     
 
       <section id='tune'>
