add data attribute to form element

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div id='form-container'>
           <h2>Contact Me!</h2>
 
-          <form>
+          <form name='contact' data-netlify='true'>
             <label for='name'>Your Name: </label>
             <input id='name' type='text' autocomplete='name' required><br>
   
