--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
           <h2>Contact Me!</h2>
 
           <form name='contact' data-netlify='true'>
-            <label for='name'>Your Name: </label>
+            
+            <label for='name'>Your Name:</label>
             <input id='name' type='text' name='name' autocomplete='name' required><br>
+
+            <label for='email'>Your Email:</label>
+            <input id='email' type='text' name='email' autocomplete='email' required><br>
   
             <label for='reason'>Reason for contact:</label>
             <select id='reason' name='reason for contact'>
-              <option value='default' selected>Select One</option>
+              <option value='default' selected>--Select One--</option>
               <option value='music'>Music</option>
               <option value='web development'>Web Development</option>
               <option value='scleroderma'>Scleroderma</option>
