add video iframe

--- a/index.html
+++ b/index.html
@@ -274,6 +274,16 @@
         </div>
         
     </section>
+
+    <section>
+      <h2>A Short Video:</h2>
+      <figure>
+        <div id='video-container'>
+          <iframe id='myVideo' src="https://www.youtube.com/embed/mZvBWswx9As" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <figcaption>Charlie the Cavapoo sleeping soundly on the couch</figcaption>
+      </figure>
+    </section>
   </main>
 
   <footer>
