--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
   </head>
   <body>
     <header>
-      <img src="img/bob.svg" alt="blue origami bird logo">
-      <h1>Web Dev 1</h1>
+      <div id='logo'>
+        <img src="img/bob.svg" alt="blue origami bird logo">
+        <h1>Web Dev 1</h1>
+      </div>
     </header>
+
+    <nav>
+      <ul>
+        <li><a href="#bio">biography</a></li>
+        <li><a href="#hobbies">hobbies</a></li>
+        <li><a href="#gallery">photo gallery</a></li>
+        <li><a href='#lit'>book excerpt</a></li>
+        <li><a href='#form'>contact me</a></li>
+        <li><a href='#tune'>guess the tune</a></li>
+        <li><a href='#video'>video</a></li>
+      </ul>
+    </nav>
+
+    <a href='#' id='back-to-top'>Back To Top</a>
 
     <main>
       <section id="hero">
@@ -275,7 +291,7 @@
         
     </section>
 
-    <section>
+    <section id='video'>
       <h2>A Short Video:</h2>
       <figure>
         <div id='video-container'>
