--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   
               <!-- Phone Number -->
               <label for='phone'>Phone:</label>
-              <input id='phone' type='tel' name='phone' autocomplete='phone'>
+              <input id='phone' type='tel' name='phone'>
 
               <label for='phone-type'>Phone Type</label>
               <select id='phone-type' name='phone-type'>
@@ -338,7 +338,9 @@
               </select>
       
               <label for='message'>Write a message:</label>
-              <textarea id='message' name='message' ro<a href="https://icons8.com/icon/nRgy12QAqQ08/menu">Menu icon by Icons8</a>ws='6'></textarea>
+              <textarea id='message' name='message' rows='6'>
+                <a href="https://icons8.com/icon/nRgy12QAqQ08/menu">Menu icon by Icons8</a>
+              </textarea>
 
               <fieldset>
                 <legend>Would you like a reply?</legend>
