--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header id='header'>
       <a href='#' id='logo'>
-        <img src="img/eg.png" alt="logo of my initials">
+        <img src="img/eg(1).png" alt="logo of my initials">
       </a>
       
       <nav id='main-nav'>
@@ -102,11 +102,12 @@
       <section id='hobbies'>
         <!-- hobbies section -->
         <h2>My Hobbies</h2>
-        <ul>
-          <li> &#9834 listening to music &#9835</li>
-          <li>playing video games</li>
-          <li>petting my dog</li>
-          <li>playing the clarinet
+        <div id='hobbies-container'>
+          <ul>
+            <li> &#9834 listening to music &#9835</li>
+            <li>playing video games</li>
+            <li>petting my dog</li>
+            <li>playing the clarinet
           </ul>
           <audio controls> <source src="img/Mvmt.m4a" type="audio/mpeg">
             Your browser does not support the audio element.</audio> </li>
@@ -114,6 +115,7 @@
           <div>by Paquito D'Rivera, 2009</div>
           <div>Emma Grey, clarinet</div>
           <div>Mary Holzhauer, pianist</div>
+        </div>
       </section>
 
       <section id='gallery'>
