replace with new logo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet"> 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet"> 
@@ -13,7 +19,7 @@
   <body>
     <header id='header'>
       <a href='#' id='logo'>
-        <img src="img/eg(1).png" alt="logo of my initials">
+        <img src="img/signika-eg.svg" alt="logo of my initials">
       </a>
       
       <nav id='main-nav'>
@@ -340,8 +346,7 @@
               </select>
       
               <label for='message'>Write a message:</label>
-              <textarea id='message' name='message' rows='6'>
-              </textarea>
+              <textarea id='message' name='message' rows='6'></textarea>
 
               <fieldset>
                 <legend>Would you like a reply?</legend>
