add animation to and restyle contact form

--- a/index.html
+++ b/index.html
@@ -328,22 +328,26 @@
               <input id='phone' type='tel' name='phone'>
 
               <label for='phone-type'>Phone Type</label>
-              <select id='phone-type' name='phone-type'>
-                <option value='default' selected>--Select One--</option>
-                <option value='home'>Home</option>
-                <option value='mobile'>Mobile</option>
-                <option value='work'>Work</option>
-              </select>
+              <div class='select'>
+                <select id='phone-type' name='phone-type'>
+                  <option value='default' selected>--Select One--</option>
+                  <option value='home'>Home</option>
+                  <option value='mobile'>Mobile</option>
+                  <option value='work'>Work</option>
+                </select>
+              </div>
       
               <label for='reason'>Reason for contact:</label>
-              <select id='reason' name='reason for contact'>
-                <option value='default' selected>--Select One--</option>
-                <option value='music'>Music</option>
-                <option value='web development'>Web Development</option>
-                <option value='scleroderma'>Scleroderma</option>
-                <option value='friendship'>Friendship</option>
-                <option value='video games'>Video Games</option>
-              </select>
+              <div class='select'>
+                <select id='reason' name='reason for contact'>
+                  <option value='default' selected>--Select One--</option>
+                  <option value='music'>Music</option>
+                  <option value='web development'>Web Development</option>
+                  <option value='scleroderma'>Scleroderma</option>
+                  <option value='friendship'>Friendship</option>
+                  <option value='video games'>Video Games</option>
+                </select>
+              </div>
       
               <label for='message'>Write a message:</label>
               <textarea id='message' name='message' rows='6'></textarea>
